--- a/index.html
+++ b/index.html
@@ -1,36 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MangaFan</title>
-</head>
-<body>
- 
-<h1>MangaFan a hoşgeldiniz</h1>  
-<a href="./drstone.html">
-<h2>dr.stone</h2>
-<img width="500px" height="500px" src="./MV5BYzZkYjM1MWMtNTY3Mi00MTMzLTlhNmQtN2ExZjFkYzdjZmFjXkEyXkFqcGc@._V1_.jpg" alt="dr.stone">
-<p>komedi,bilim kurgu,maceralar içerir</p>   
-</a>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>MangaFan</title> 
+    <link rel="stylesheet" href="style.css">
+</head> 
+<body> 
+  
+<div class="manga">  
+<h1>MangaFan a hoşgeldiniz</h1>   
+<a href="./drstone.html"> 
+<h2>Dr.stone</h2> 
+<img width="500px" height="500px" src="./img/drstone_kapak.jpg" alt="dr.stone"> 
+</a> 
+<p>komedi,bilim kurgu,maceralar içerir</p>
+</div>
 
-<a href="./bluelock.html">
-<h2>blue lock</h2>
-<img width="500px" height="500px" src="./Webp.net-compress-image-10-300x425.jpg" alt="blue lock">
-<p>spor,shounen içerir<p>
-</a>
+<div class="manga">
+<a href="./bluelock.html"> 
+<h2>Blue lock</h2> 
+<img width="500px" height="500px" src="./img/blue_lock_kapak.jpg" alt="blue lock"> 
+</a> 
+<p>spor,shounen içerir</p> 
+</div>
 
-<a href="./kenkadokugaku.html">
-<h2>kenka dokugaku</h2>
-<img width="500px" height="500px" src="./142521.jpg" alt="kenka dokugaku">
-<p>okul,aksiyon içerir</p>
-</a>
+<div class="manga">
+<a href="./kenkadokugaku.html"> 
+<h2>Kenka dokugaku</h2> 
+<img width="500px" height="500px" src="./img/kenka_kapak.jpg" alt="kenka dokugaku"> 
+</a> 
+<p>okul,aksiyon içerir</p> 
+</div>
 
-<a href="./sousounofrieren.html">
-<h2>sousou no frieren</h2>
-<img width="500px" height="500px" src="./180410001696010341l.webp" alt="sousou no frieren">
+<div class="manga">
+<a href="./sousounofrieren.html"> 
+<h2>Sousou no frieren</h2> 
+<img width="500px" height="500px" src="./img/friren_kapak.webp" alt="sousou no frieren"> 
+</a> 
 <p>dram,macera,hayal içerir</p>
-</a>
+</div>
 
-</body>
+<footer>
+<p>© 2025 <strong>MangaFan</strong>. Tüm hakları saklıdır. Bu sitedeki içerikler izinsiz kopyalanamaz veya dağıtılamaz.</p>
+</footer>
+
+</body> 
 </html>
