--- a/drstone.html
+++ b/drstone.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaFan</title>
+    <link rel="stylesheet" href="manga.css">
 </head>
 <body>
   
+<a href="./index.html">menu</a>
+
 <h1>1.bölüm</h1>    
 
-<img width="700px" height="900px" src="./5.webp" alt="dr.stone manga">
-<img width="700px" height="900px" src="./6.webp" alt="dr.stone manga">
-<img width="700px" height="900px" src="./7.webp" alt="dr.stone manga">
-<img width="700px" height="900px" src="./8.webp" alt="dr.stone manga">
-
-<a href="./index.html">menu</a>
+<img width="700px" height="900px" src="./img/ds1.webp" alt="dr.stone manga">
+<img width="700px" height="900px" src="./img/ds2.webp" alt="dr.stone manga">
+<img width="700px" height="900px" src="./img/ds3.webp" alt="dr.stone manga">
+<img width="700px" height="900px" src="./img/ds4.webp" alt="dr.stone manga">
 
 </body>
 </html>
