--- a/bluelock.html
+++ b/bluelock.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaFan</title>
+    <link rel="stylesheet" href="manga.css">
 </head>
 <body>
-    
-<h1>1.bölüm</h1>
-
-<img width="700px" height="900px" src="./14.jpg" alt="blue lock manga">
-<img width="700px" height="900px" src="./15.jpg" alt="blue lock manga">
-<img width="700px" height="900px" src="./16.jpg" alt="blue lock manga">
-<img width="700px" height="900px" src="./17.jpg" alt="blue lock manga">
 
 <a href="./index.html">menu</a>
+
+<h1>1.bölüm</h1>
+
+<img width="700px" height="900px" src="./img/bl1.jpg" alt="blue lock manga">
+<img width="700px" height="900px" src="./img/bl2.jpg" alt="blue lock manga">
+<img width="700px" height="900px" src="./img/bl3.jpg" alt="blue lock manga">
+<img width="700px" height="900px" src="./img/bl4.jpg" alt="blue lock manga">
 
 </body>
 </html>
