--- a/kenkadokugaku.html
+++ b/kenkadokugaku.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaFan</title>
+    <link rel="stylesheet" href="manga.css">
 </head>
 <body>
     
+<a href="./index.html">menu</a>
+
 <h1>1.bölüm</h1>
 
-<img width="700px" height="2000px" src="./a001.jpg" alt="kenka dokugaku manga">
-<img width="700px" height="2000px" src="./a003.jpg" alt="kenka dokugaku manga">
-
-<a href="./index.html">menu</a>
+<img width="700px" height="2000px" src="./img/kenka1.jpg" alt="kenka dokugaku manga">
+<img width="700px" height="2000px" src="./img/kenka2.jpg" alt="kenka dokugaku manga">
 
 </body>
 </html>
