--- a/sousounofrieren.html
+++ b/sousounofrieren.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaFan</title>
+    <link rel="stylesheet" href="manga.css">
 </head>
 <body>
     
-<h1>1.bölüm</h1>
-
-<img width="700px" height="900px" src="./5 (1).webp" alt="sousou no frieren">
-<img width="700px" height="900px" src="./6 (1).webp" alt="sousou no frieren">
-<img width="700px" height="900px" src="./7 (1).webp" alt="sousou no frieren">
-
 <a href="./index.html">menu</a>
 
+<h1>1.bölüm</h1>
+
+<img width="700px" height="900px" src="./img/friren1.webp" alt="sousou no frieren">
+<img width="700px" height="900px" src="./img/friren2.webp" alt="sousou no frieren">
+<img width="700px" height="900px" src="./img/friren3.webp" alt="sousou no frieren">
 
 </body>
 </html>
