--- a/sousounofrieren.html
+++ b/sousounofrieren.html
@@ -12,9 +12,9 @@
 
 <h1>1.bölüm</h1>
 
-<img width="700px" height="900px" src="./img/friren1.webp" alt="sousou no frieren">
-<img width="700px" height="900px" src="./img/friren2.webp" alt="sousou no frieren">
-<img width="700px" height="900px" src="./img/friren3.webp" alt="sousou no frieren">
+<img width="700px" height="900px" src="./friren1.webp" alt="sousou no frieren">
+<img width="700px" height="900px" src="./friren2.webp" alt="sousou no frieren">
+<img width="700px" height="900px" src="./friren3.webp" alt="sousou no frieren">
 
 </body>
 </html>
