--- a/kenkadokugaku.html
+++ b/kenkadokugaku.html
@@ -12,8 +12,8 @@
 
 <h1>1.bölüm</h1>
 
-<img width="700px" height="2000px" src="./img/kenka1.jpg" alt="kenka dokugaku manga">
-<img width="700px" height="2000px" src="./img/kenka2.jpg" alt="kenka dokugaku manga">
+<img width="700px" height="2000px" src="./kenka1.jpg" alt="kenka dokugaku manga">
+<img width="700px" height="2000px" src="./kenka2.jpg" alt="kenka dokugaku manga">
 
 </body>
 </html>
