--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>MangaFan a hoşgeldiniz</h1>   
 <a href="./drstone.html"> 
 <h2>Dr.stone</h2> 
-<img width="500px" height="500px" src="./img/drstone_kapak.jpg" alt="dr.stone"> 
+<img width="500px" height="500px" src="./drstone_kapak.jpg" alt="dr.stone"> 
 </a> 
 <p>komedi,bilim kurgu,maceralar içerir</p>
 </div>
@@ -20,7 +20,7 @@
 <div class="manga">
 <a href="./bluelock.html"> 
 <h2>Blue lock</h2> 
-<img width="500px" height="500px" src="./img/blue_lock_kapak.jpg" alt="blue lock"> 
+<img width="500px" height="500px" src="./blue_lock_kapak.jpg" alt="blue lock"> 
 </a> 
 <p>spor,shounen içerir</p> 
 </div>
@@ -28,7 +28,7 @@
 <div class="manga">
 <a href="./kenkadokugaku.html"> 
 <h2>Kenka dokugaku</h2> 
-<img width="500px" height="500px" src="./img/kenka_kapak.jpg" alt="kenka dokugaku"> 
+<img width="500px" height="500px" src="./kenka_kapak.jpg" alt="kenka dokugaku"> 
 </a> 
 <p>okul,aksiyon içerir</p> 
 </div>
@@ -36,7 +36,7 @@
 <div class="manga">
 <a href="./sousounofrieren.html"> 
 <h2>Sousou no frieren</h2> 
-<img width="500px" height="500px" src="./img/friren_kapak.webp" alt="sousou no frieren"> 
+<img width="500px" height="500px" src="./friren_kapak.webp" alt="sousou no frieren"> 
 </a> 
 <p>dram,macera,hayal içerir</p>
 </div>
