--- a/drstone.html
+++ b/drstone.html
@@ -12,10 +12,10 @@
 
 <h1>1.bölüm</h1>    
 
-<img width="700px" height="900px" src="./img/ds1.webp" alt="dr.stone manga">
-<img width="700px" height="900px" src="./img/ds2.webp" alt="dr.stone manga">
-<img width="700px" height="900px" src="./img/ds3.webp" alt="dr.stone manga">
-<img width="700px" height="900px" src="./img/ds4.webp" alt="dr.stone manga">
+<img width="700px" height="900px" src="./ds1.webp" alt="dr.stone manga">
+<img width="700px" height="900px" src="./ds2.webp" alt="dr.stone manga">
+<img width="700px" height="900px" src="./ds3.webp" alt="dr.stone manga">
+<img width="700px" height="900px" src="./ds4.webp" alt="dr.stone manga">
 
 </body>
 </html>
