--- a/bluelock.html
+++ b/bluelock.html
@@ -12,10 +12,10 @@
 
 <h1>1.bölüm</h1>
 
-<img width="700px" height="900px" src="./img/bl1.jpg" alt="blue lock manga">
-<img width="700px" height="900px" src="./img/bl2.jpg" alt="blue lock manga">
-<img width="700px" height="900px" src="./img/bl3.jpg" alt="blue lock manga">
-<img width="700px" height="900px" src="./img/bl4.jpg" alt="blue lock manga">
+<img width="700px" height="900px" src="./bl1.jpg" alt="blue lock manga">
+<img width="700px" height="900px" src="./bl2.jpg" alt="blue lock manga">
+<img width="700px" height="900px" src="./bl3.jpg" alt="blue lock manga">
+<img width="700px" height="900px" src="./bl4.jpg" alt="blue lock manga">
 
 </body>
 </html>
