--- a/kenkadokugaku.html
+++ b/kenkadokugaku.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MangaFan</title>
+    <title>Kenka Dokugaku</title>
     <link rel="stylesheet" href="manga.css">
 </head>
 <body>
