--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Türkçe Manga Webtoon Manhwa Oku</title> 
+    <title>MangaFan-Türkçe Manga,Webtoon,Manhwa Oku</title> 
     <link rel="stylesheet" href="style.css">
 </head> 
 <body> 
